# SELECT-UNSELECT-of-Objects

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  viewportobject.cpp  viewportobject.h
